# RIOT-rs

./: Cargo.toml  GOVERNANCE.md  README.md  laze-project.yml
.github/workflows/: build-deploy-docs.yml  main.yml
book/: book.toml
book/src/: support_matrix.html
doc/: support_matrix.yml
examples/: README.md  laze.yml
examples/benchmark/: Cargo.toml
examples/blinky/: Cargo.toml
examples/blinky/src/: main.rs  pins.rs
examples/coap/: Cargo.toml  laze.yml
examples/coap/src/: main.rs
examples/core-sizes/: Cargo.toml
examples/core-sizes/src/: main.rs
examples/embassy/: Cargo.toml  README.md
examples/embassy-http-server/: Cargo.toml
examples/embassy-http-server/src/: main.rs  pins.rs
examples/embassy-net-tcp/: Cargo.toml  README.md
examples/embassy-net-tcp/src/: main.rs
examples/embassy-net-udp/: Cargo.toml  README.md
examples/embassy-net-udp/src/: main.rs
examples/embassy-usb-keyboard/: Cargo.toml
examples/embassy-usb-keyboard/src/: main.rs
examples/embassy/src/: main.rs
examples/gpio/: Cargo.toml
examples/gpio/src/: main.rs  pins.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/log/: Cargo.toml  README.md
examples/log/src/: main.rs
examples/minimal/: Cargo.toml
examples/random/: Cargo.toml
examples/threading-channel/src/: main.rs
examples/threading-dynamic-prios/src/: main.rs
examples/threading-lock/src/: main.rs
examples/threading-multicore/: Cargo.toml  laze.yml
examples/threading-multicore/src/: main.rs
examples/threading-mutex/: Cargo.toml  README.md  laze.yml
examples/threading-mutex/src/: main.rs
examples/threading-net-tcp/: Cargo.toml  README.md  laze.yml
examples/threading-net-tcp/src/: main.rs
examples/usb-serial/: Cargo.toml
src/: laze.yml
src/ariel-os/: Cargo.toml
src/ariel-os-arch/: Cargo.toml
src/ariel-os-arch/src/: lib.rs
src/ariel-os-arch/src/dummy/: gpio.rs
src/ariel-os-bench/src/: lib.rs
src/ariel-os-boards/: Cargo.toml
src/ariel-os-boards/dwm1001/: Cargo.toml
src/ariel-os-boards/espressif-esp32-s3-wroom-1/: Cargo.toml
src/ariel-os-boards/microbit/: Cargo.toml
src/ariel-os-boards/microbit-v2/: Cargo.toml
src/ariel-os-boards/nrf51/: Cargo.toml
src/ariel-os-boards/nrf52/: Cargo.toml
src/ariel-os-boards/nrf52840-mdk/: Cargo.toml
src/ariel-os-boards/nrf5340/: Cargo.toml
src/ariel-os-boards/particle-xenon/: Cargo.toml
src/ariel-os-boards/src/: lib.rs
src/ariel-os-boards/st-nucleo-f401re/: Cargo.toml
src/ariel-os-boards/st-nucleo-wb55/: Cargo.toml
src/ariel-os-chips/: Cargo.toml
src/ariel-os-chips/stm32/: Cargo.toml
src/ariel-os-chips/stm32f4xx/: Cargo.toml
src/ariel-os-core/: Cargo.toml  build.rs  cbindgen.toml
src/ariel-os-core/include/: kernel_types.h  msg.h  mutex.h  sched.h  thread.h  thread_flags.h
src/ariel-os-core/src/: lib.rs
src/ariel-os-core/src/c/: thread.rs
src/ariel-os-debug/: Cargo.toml
src/ariel-os-embassy/: Cargo.toml
src/ariel-os-embassy/src/: blocker.rs  gpio.rs  lib.rs  network.rs  usb.rs
src/ariel-os-embassy/src/i2c/controller/: mod.rs
src/ariel-os-embassy/src/spi/main/: mod.rs
src/ariel-os-esp/: Cargo.toml
src/ariel-os-esp/src/: gpio.rs  lib.rs
src/ariel-os-esp/src/wifi/: esp_wifi.rs
src/ariel-os-macros/src/: spawner.rs  task.rs  thread.rs
src/ariel-os-nrf/: Cargo.toml
src/ariel-os-nrf/src/: gpio.rs  hwrng.rs  lib.rs  usb.rs
src/ariel-os-nrf/src/spi/: mod.rs
src/ariel-os-random/src/: lib.rs
src/ariel-os-rp/: Cargo.toml
src/ariel-os-rp/src/: gpio.rs  lib.rs
src/ariel-os-rp/src/spi/: mod.rs
src/ariel-os-rt/: Cargo.toml
src/ariel-os-rt/src/: lib.rs  testing.rs
src/ariel-os-runqueue/: Cargo.toml  README.md
src/ariel-os-runqueue/src/: lib.rs  runqueue.rs
src/ariel-os-stm32/src/: gpio.rs  hwrng.rs  lib.rs
src/ariel-os-threads/: Cargo.toml
src/ariel-os-threads/src/: lib.rs  thread_flags.rs  threadlist.rs
src/ariel-os-threads/src/arch/: cortex_m.rs  riscv.rs  xtensa.rs
src/ariel-os-threads/src/smp/: esp32s3.rs  mod.rs  rp.rs  rp2040.rs
src/ariel-os/src/: lib.rs
src/lib/clist/: Cargo.toml
src/lib/rbi/: Cargo.toml
src/lib/ringbuffer/: Cargo.toml
src/riot-rs/: Cargo.toml
src/riot-rs-bench/: Cargo.toml
src/riot-rs-bench/src/: cortexm.rs  lib.rs
src/riot-rs-debug/: Cargo.toml
src/riot-rs-embassy/: Cargo.toml
src/riot-rs-embassy/src/: config.rs  lib.rs  network.rs  sendcell.rs  thread_executor.rs
src/riot-rs-embassy/src/arch/: dummy.rs  mod.rs  nrf52.rs
src/riot-rs-embassy/src/wifi/: esp_wifi.rs
src/riot-rs-esp/: Cargo.toml
src/riot-rs-macros/src/: thread.rs
src/riot-rs-rt/: Cargo.toml
src/riot-rs-rt/src/: cortexm.rs
src/riot-rs-runqueue/: Cargo.toml
src/riot-rs-runqueue/src/: clist.rs  lib.rs  runqueue.rs
src/riot-rs-threads/: Cargo.toml
src/riot-rs-threads/src/: autostart_thread.rs  channel.rs  critical_section.rs  ensure_once.rs  lib.rs  lock.rs  scheduler.rs  scheduler_lock.rs  semaphore.rs  spinlock.rs  thread.rs  thread_flags.rs  threadlist.rs  threads.rs
src/riot-rs-threads/src/arch/: cortex_m.rs  mod.rs  riscv.rs  xtensa.rs
src/riot-rs-threads/src/smp/: esp32s3.rs  mod.rs  rp2040.rs
src/riot-rs-threads/src/sync/: atomic_lock.rs  channel.rs  condvar.rs  cs_lock.rs  lock.rs  mod.rs  mutex.rs  (+2 more)
src/riot-rs/src/: lib.rs
tests/: laze.yml
tests/benchmarks/bench_sched_flags/: Cargo.toml  laze.yml
tests/gpio/: Cargo.toml
tests/gpio-interrupt-nrf/: Cargo.toml
tests/gpio-interrupt-nrf/src/: main.rs
tests/gpio-interrupt-stm32/: Cargo.toml
tests/gpio-interrupt-stm32/src/: main.rs
tests/gpio/src/: main.rs  pins.rs
tests/i2c-controller/: Cargo.toml
tests/i2c-controller/src/: main.rs  pins.rs
tests/spi-loopback/: Cargo.toml
tests/spi-loopback/src/: main.rs  pins.rs
tests/spi-main/: Cargo.toml
tests/spi-main/src/: main.rs  pins.rs
tests/threading-condvar/: Cargo.toml  laze.yml
tests/threading-condvar/src/: main.rs
tests/threading-dynamic-prios/: Cargo.toml
tests/threading-dynamic-prios/src/: main.rs
tests/threading-lock/: Cargo.toml
tests/threading-mutex/: Cargo.toml  laze.yml
(+18 files in other folders)
