[package]
name = "embassy-net-tcp"
version = "0.1.0"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
embassy-executor = { workspace = true, default-features = false }
embassy-net = { workspace = true, features = ["tcp"] }
embassy-time = { workspace = true, default-features = false }
embedded-io-async = "0.6.1"
heapless = { workspace = true }
ariel-os = { path = "../../src/ariel-os", features = [
  "override-network-config",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
