[package]
name = "threading-multicore"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
riot-rs = { path = "../../src/riot-rs", default-features = false, features = [
  "threading",
  "multicore",
  "core-affinity",
] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }
riot-rs-rt = { path = "../../src/riot-rs-rt", features = ["_panic-handler"] }
