[package]
name = "threading-net-tcp"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]

embassy-executor = { workspace = true, default-features = false }
embassy-time = { workspace = true, default-features = false }
riot-rs = { path = "../../src/riot-rs", features = ["threading"] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }
static_cell = "2.1"
embassy-net = { workspace = true, features = ["tcp"] }
heapless = { workspace = true }
embedded-io-async = "0.6.1"


[target.'cfg(context = "esp32c3")'.dependencies]
esp-hal = { workspace = true, features = ["esp32c3"] }

[target.'cfg(context = "esp32c6")'.dependencies]
esp-hal = { workspace = true, features = ["esp32c6"] }

