[package]
name = "threading-net-tcp"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
embassy-executor = { workspace = true }
embassy-net = { workspace = true, features = ["tcp"] }
embassy-time = { workspace = true }
embedded-io-async = "0.6.1"
riot-rs = { path = "../../src/riot-rs", features = ["threading"] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }

