[package]
name = "ariel-os-embassy"
version = "0.1.0"
license.workspace = true
edition = "2021"

[lints]
workspace = true

[dependencies]
const_panic.workspace = true
critical-section.workspace = true
linkme.workspace = true
static_cell.workspace = true
cfg-if.workspace = true

embassy-embedded-hal = { workspace = true, optional = true }
embassy-executor = { workspace = true, features = ["nightly"] }
embassy-hal-internal = { workspace = true }
embassy-net = { workspace = true, optional = true, features = [
  "dhcpv4",
  "medium-ethernet",
] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, optional = true }
embassy-usb = { workspace = true, optional = true }

embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }

ariel-os-arch = { path = "../ariel-os-arch" }
ariel-os-embassy-common = { workspace = true }
ariel-os-threads = { path = "../ariel-os-threads", optional = true }
ariel-os-debug = { workspace = true }
ariel-os-macros = { path = "../ariel-os-macros" }
ariel-os-rt = { path = "../ariel-os-rt" }
ariel-os-random = { path = "../ariel-os-random", optional = true }
ariel-os-utils = { workspace = true }

heapless = "0.8.0"
once_cell = { workspace = true }

# ISA-specific
[target.'cfg(context = "cortex-m")'.dependencies]
embassy-executor = { workspace = true, default-features = false, features = [
  "arch-cortex-m",
] }

[features]
## Enables GPIO interrupt support.
external-interrupts = [
  "ariel-os-embassy-common/external-interrupts",
  "ariel-os-arch/external-interrupts",
]
time = ["dep:embassy-time", "embassy-executor/integrated-timers"]

## Enables I2C support.
i2c = [
  "dep:embassy-embedded-hal",
  "ariel-os-embassy-common/i2c",
  "ariel-os-arch/i2c",
]
## Enables SPI support.
spi = [
  "dep:embassy-embedded-hal",
  "ariel-os-embassy-common/spi",
  "ariel-os-arch/spi",
]
usb = ["dep:embassy-usb", "ariel-os-arch/usb"]
# embassy-net requires embassy-time and support for timeouts in the executor
net = ["dep:embassy-net", "time"]
usb-ethernet = ["usb", "net"]
## Use a hardware RNG to seed into the ariel-os-random system-wide RNG
hwrng = ["ariel-os-arch/hwrng"]

wifi = []
wifi-cyw43 = ["ariel-os-arch/wifi-cyw43", "net", "wifi"]
wifi-esp = ["ariel-os-arch/wifi-esp", "net", "wifi"]

threading = ["dep:ariel-os-threads"]
override-network-config = []
override-usb-config = []

executor-single-thread = [
  "ariel-os-rt/executor-single-thread",
  "ariel-os-arch/executor-single-thread",
]
executor-interrupt = ["ariel-os-arch/executor-interrupt"]
executor-thread = ["threading"]
executor-none = []

defmt = [
  "embassy-net?/defmt",
  "embassy-time?/defmt",
  "embassy-usb?/defmt",
  "ariel-os-arch/defmt",
  "ariel-os-embassy-common/defmt",
]
