[package]
name = "ariel-os"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
document-features = { workspace = true }
linkme = { workspace = true }
ariel-os-bench = { workspace = true, optional = true }
ariel-os-boards = { path = "../ariel-os-boards" }
ariel-os-debug = { workspace = true }
ariel-os-embassy = { path = "../ariel-os-embassy" }
ariel-os-macros = { path = "../ariel-os-macros" }
ariel-os-random = { workspace = true, optional = true }
ariel-os-rt = { path = "../ariel-os-rt" }
ariel-os-threads = { path = "../ariel-os-threads", optional = true }
ariel-os-utils = { workspace = true }
static_cell = { workspace = true }

[features]
default = ["ariel-os-rt/_panic-handler"]

#! ## System functionality
## Enables GPIO interrupt support.
external-interrupts = ["ariel-os-embassy/external-interrupts"]
## Enables threading support, see the [`macro@thread`] attribute macro.
threading = [
  "dep:ariel-os-threads",
  "ariel-os-rt/threading",
  "ariel-os-embassy/threading",
]
## Enables support for timeouts in the internal executor---required to use
## `embassy_time::Timer`.
time = ["ariel-os-embassy/time"]
## Enables the [`random`] module.
random = ["ariel-os-random"]
## Enables a cryptographically secure random number generator in the [`random`] module.
csprng = ["ariel-os-random/csprng"]
## Enables seeding the random number generator from hardware.
hwrng = ["ariel-os-embassy/hwrng"]

#! ## Serial communication
## Enables I2C support.
i2c = ["ariel-os-embassy/i2c"]
## Enables SPI support.
spi = ["ariel-os-embassy/spi"]
## Enables USB support.
usb = ["ariel-os-embassy/usb"]

#! ## System configuration
#! The [`macro@config`] attribute macro allows to provide configuration for
#! specific system functionality.
#! The features below need to be enabled so that the provided custom
#! configuration is taken into account.
## Enables custom network configuration.
override-network-config = ["ariel-os-embassy/override-network-config"]
## Enables custom USB configuration.
override-usb-config = ["ariel-os-embassy/override-usb-config"]

#! ## Network type selection
#! At most one of the features below can be enabled at once.
#! These features are normally automatically selected by
#! [laze](https://github.com/kaspar030/laze) based on what the board supports,
#! and don't need to be selected manually.
## Selects Ethernet over USB (USB CDC-NCM).
usb-ethernet = ["ariel-os-embassy/usb-ethernet"]
## Selects Wi-Fi (with the CYW43 chip).
wifi-cyw43 = ["ariel-os-embassy/wifi-cyw43"]
## Selects Wi-Fi (on ESP chips).
wifi-esp = ["ariel-os-embassy/wifi-esp"]

#! ## Development and debugging
## Enables the debug console, required to use
## [`println!`](ariel_os_debug::println).
debug-console = ["ariel-os-rt/debug-console"]
## Enables logging support through `defmt`.
defmt = [
  "ariel-os-debug/defmt",
  "ariel-os-embassy/defmt",
  "ariel-os-threads?/defmt",
  "ariel-os-bench?/defmt",
]
## Enables benchmarking facilities.
bench = ["dep:ariel-os-bench"]
## Prints nothing in case of panics (may help reduce binary size).
silent-panic = ["ariel-os-rt/silent-panic"]
## Allows to have no boards selected, useful to run target-independent tooling.
no-boards = ["ariel-os-boards/no-boards", "executor-none"]

net = ["ariel-os-embassy/net"]

#! ## Executor type selection for the (autostarted) main executor
#! Exactly one of the features below must be enabled at once.
## Enables the interrupt executor.
executor-interrupt = ["ariel-os-embassy/executor-interrupt"]
## Enables the single thread-mode executor.
executor-single-thread = ["ariel-os-embassy/executor-single-thread"]
## Enables the ariel-os-threading thread executor.
executor-thread = ["ariel-os-embassy/executor-thread", "threading"]
# Don't start any executor automatically.
# *Used for internal testing only.*
executor-none = ["ariel-os-embassy/executor-none"]

#! ## Multicore functionality.
single-core = ["ariel-os-rt/single-core"]
multi-core = ["ariel-os-threads?/multi-core", "ariel-os-rt/multi-core"]
core-affinity = ["multi-core", "ariel-os-threads?/core-affinity"]
